--- a/docroot/index.html
+++ b/docroot/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <kit-header>
-      Cips
     </kit-header>
     <kit-hero>
       <h1>Trillo.js</h1>
@@ -16,13 +15,7 @@
         a web framework for Node.js and the browser
         that adds reactivity to HTML itself
       </p>
-      <kit-search/>
+      <kit-search :placeholder="search docs"/>
     </kit-hero>
-    Seconds: [[count]]
-    <h1>[[head.pageFontFamily]]</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-    <p>123456790</p>
-    <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
-    <p>abcdefghijklmnopqrstuvwxyz</p>
   </body>
 </html>
