--- a/docroot/kit/page.htm
+++ b/docroot/kit/page.htm
@@ -1,6 +1,7 @@
 <lib
   :page_fontFamily="Roboto"
   :page_bd1="rgba(0,0,0,.05)"
+  :page_placeholderFg="rgba(0,0,0,.23)"
 >
 
   <meta charset="UTF-8">
@@ -10,10 +11,21 @@
   <link href='https://fonts.googleapis.com/css?family=[[page_fontFamily]]:300,400,600' rel='stylesheet'>
   <style>
     body {
-      font-family: '[[page_fontFamily]]', Helvetica, sans-serif;
+      /* font-family: '[[page_fontFamily]]', Helvetica, sans-serif; */
+      font-family: Helvetica, sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-size: 16px;
+      letter-spacing: .5px;
       /* line-height: 1.8em; */
       color: #222;
+    }
+
+    input::placeholder {
+      color: [[page_placeholderFg]];
+      opacity: 1; /* Firefox */
+    }
+    input:focus::placeholder {
+      color: rgba(0,0,0,0);
     }
   </style>
 
