--- a/docroot/kit/hero.htm
+++ b/docroot/kit/hero.htm
@@ -10,7 +10,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 50% 50%;
-      
+
       color: #fff;
       font-size: 1.2rem;
       padding: 1.75em 2em;
@@ -34,6 +34,12 @@
     @media only screen and (min-width: [[grid_rowData[2].min]]px) {
       .kit-hero  {
         font-size: 1.5rem;
+        padding: 3em;
+      }
+    }
+    @media only screen and (min-width: [[grid_rowData[5].min]]px) {
+      .kit-hero  {
+        font-size: 1.75rem;
         padding: 3em;
       }
     }
