--- a/docroot/index.html
+++ b/docroot/index.html
@@ -15,7 +15,7 @@
         a web framework for Node.js and the browser
         that adds reactivity to HTML itself
       </p>
-      <!-- <kit-search :placeholder="search docs"/> -->
+      <kit-search :placeholder="search docs"/>
     </kit-hero>
   </body>
 </html>
