--- a/docroot/kit/hero.htm
+++ b/docroot/kit/hero.htm
@@ -22,14 +22,14 @@
     .kit-hero h1 {
       font-weight: 700;
       margin: 0rem 0;
-      text-shadow: rgba(0,0,0,.2) 1px 1px;
+      /* text-shadow: rgba(0,0,0,.2) 1px 1px; */
     }
     .kit-hero p {
       display: inline-block;
       max-width: 21em;
       font-weight: 300;
       line-height: 1.5em;
-      text-shadow: rgba(0,0,0,.1) 0px 1px;
+      /* text-shadow: rgba(0,0,0,.1) 0px 1px; */
     }
     @media only screen and (min-width: [[grid_rowData[2].min]]px) {
       .kit-hero  {
