--- a/docroot/kit/page.htm
+++ b/docroot/kit/page.htm
@@ -1,5 +1,4 @@
 <lib
-  :page_fontFamily="Roboto"
   :page_bd1="rgba(0,0,0,.05)"
   :page_placeholderFg="rgba(0,0,0,.23)"
 >
@@ -8,13 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
   <link rel="stylesheet" href="/kit/res/normalize.css">
-  <link href='https://fonts.googleapis.com/css?family=[[page_fontFamily]]:300,400,600' rel='stylesheet'>
   <style>
     body {
-      /* font-family: '[[page_fontFamily]]', Helvetica, sans-serif; */
       font-family: Helvetica, sans-serif;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-size: 16px;
+      line-height: 1.66em;
       letter-spacing: .5px;
       /* line-height: 1.8em; */
       color: #222;
