--- a/docroot/index.html
+++ b/docroot/index.html
@@ -29,7 +29,8 @@
         <div class="col">
           <div class="app-lead">
             <p>
-              Using a reactive framework in modern web development can be pretty involved — but it doesn't have to be.
+              Using a reactive framework in modern web development can be pretty involved
+              <span style="text-wrap: nowrap;">— but it doesn't have to be.</span>
             </p>
             <p>
               Trillo is a groundbreaking alternative which
@@ -74,7 +75,7 @@
               <li class="list-group-item">
                 <p>
                   Page logic <a href="#">starts in the server</a> to generate content-ready pages,
-                  and <a href="#">continues in the client</a> to support a modern user experience.
+                  and <a href="#">continues in the client</a> to support user interaction.
                 </p>
               </li>
               <li class="list-group-item">
