--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -1,15 +1,20 @@
 <lib>
+  <!--- https://getcssscan.com/css-box-shadow-examples -->
   <style data-name="app-card">
     .card {
       padding: 0;
       margin-bottom: 3rem;
       margin: 0 .5em 3em .5em;
       overflow: hidden;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 6px 0px;
     }
     .card-header {
-      background-color: rgba(222, 222, 218, 0.358);
+      /* background-color: rgba(222, 222, 218, 0.358); */
+      background-color: rgb(33, 37, 41);
+      color: white;
     }
     .card-header h5 {
+      font-size: 1.1rem;
       margin: .4em 0;
     }
     .card-body {
