--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -20,7 +20,7 @@
     }
     .app-hero p {
       display: inline-block;
-      max-width: 22em;
+      max-width: 21em;
       font-weight: 300;
     }
     .app-hero b {
@@ -29,10 +29,15 @@
     @media only screen and (min-width: 600px) {
       .app-hero  {
         font-size: 1.5rem;
-        padding: 3em 2em;
+        padding: 2.5em 2em;
       }
       .app-hero h1 {
         font-size: 2em;
+      }
+    }
+    @media only screen and (min-width: 1400px) {
+      .app-hero  {
+        font-size: 1.66rem;
       }
     }
     /* @media only screen and (min-width: 1000px) {
