--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -1,5 +1,5 @@
 <lib>
-  <:define tag="app-navbar:nav" class="navbar navbar-expand-sm bg-body-tertiary">
+  <:define tag="app-navbar:nav" class="navbar navbar-expand-sm bg-body-tertiary"  data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" href="#">[[head.title]]</a>
       <button class="navbar-toggler"
