--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -26,20 +26,40 @@
       border-radius: 0;
     }
     .app-lead {
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       font-weight: 300;
-      padding: 0 3rem 2rem 3rem;
+      padding: 1rem 3rem 3rem 3rem;
       text-align: center;
+      color: rgb(64, 71, 86);
     }
-    /* .app-lead > p {
-      display: inline-block;
-    } */
     .app-lead > p:not(:last-child) {
-      margin-bottom: 1.66rem;
+      margin-bottom: 1.85rem;
     }
     @media only screen and (min-width: 600px) {
       .app-lead  {
         font-size: 1.3rem;
+        padding: 1.75rem 3rem 3.75rem 3rem;
+      }
+      .app-lead > p:not(:last-child) {
+        margin-bottom: 2rem;
+      }
+    }
+    @media only screen and (min-width: 768px) {
+      .app-lead  {
+        font-size: 1.4rem;
+        padding: 2rem 3rem 4rem 3rem;
+      }
+    }
+    @media only screen and (min-width: 992px) {
+      .app-lead  {
+        font-size: 1.42rem;
+        padding: 2rem 3rem 4rem 3rem;
+      }
+    }
+    @media only screen and (min-width: 1400px) {
+      .app-lead  {
+        font-size: 1.45rem;
+        padding: 2rem 3rem 4rem 3rem;
       }
     }
   </style>
