--- a/docroot/index.html
+++ b/docroot/index.html
@@ -30,7 +30,7 @@
           <div class="app-lead">
             <p>
               Using a reactive framework in modern web development can be pretty involved
-              <span style="text-wrap: nowrap;">— but it doesn't have to be.</span>
+              —&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;have&nbsp;to&nbsp;be.
             </p>
             <p>
               Trillo is a groundbreaking alternative which
@@ -99,7 +99,7 @@
                 <p>
                   With <code>&lt;:define></code> you can turn blocks of markup into parametric
                   <a href="#">custom tags</a>,
-                  ready to be reused across your pages.
+                  ready to be reused across your project.
                 </p>
               </li>
               <li class="list-group-item">
