--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -1,4 +1,10 @@
 <lib>
+  <style data-name="app-navbar">
+    .navbar a {
+      color: white;
+    }
+  </style>
+
   <:define tag="app-navbar:nav" class="navbar navbar-expand-sm bg-body-tertiary"  data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" href="#">[[head.title]]</a>
@@ -45,7 +51,7 @@
                  aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>-->
-        <a href="https://github.com/fcapolini/trillo" style="color: initial" target="_blank">
+        <a href="https://github.com/fcapolini/trillo" target="_blank">
           <i class="lab la-github" style="font-size: 2rem"></i>
         </a>
       </div>
