--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -28,7 +28,7 @@
     .app-lead {
       font-size: 1.2rem;
       font-weight: 300;
-      padding: 1rem 3rem 3rem 3rem;
+      padding: .75rem 3rem 2.75rem 3rem;
       text-align: center;
       color: rgb(64, 71, 86);
     }
