--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -6,6 +6,7 @@
       margin-bottom: 3rem;
       margin: 0 .5em 3em .5em;
       overflow: hidden;
+      /* border: 0; */
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 6px 0px;
     }
     .card-header {
