--- a/docroot/parts/card.htm
+++ b/docroot/parts/card.htm
@@ -11,7 +11,7 @@
     }
     .card-header {
       /* background-color: rgba(222, 222, 218, 0.358); */
-      background-color: rgb(33, 37, 41);
+      background-color: [[page_headerBg]];
       color: white;
     }
     .card-header h5 {
