--- a/docroot/index.html
+++ b/docroot/index.html
@@ -6,12 +6,15 @@
     <title>[[title]] • Reactive HTML</title>
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--- https://icons.getbootstrap.com -->
+    <!--- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> -->
     <!--- https://icons8.com/line-awesome -->
     <link href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" rel="stylesheet">
     <:import src="parts/page.htm"/>
     <:import src="parts/navbar.htm"/>
     <:import src="parts/hero.htm"/>
     <:import src="parts/card.htm"/>
+    <:import src="/.kit/bootstrap/opt/highlight-js.htm"/>
   </head>
   <body>
     <app-navbar/>
@@ -29,8 +32,10 @@
         <div class="col">
           <div class="app-lead">
             <p>
-              Using a reactive framework in modern web development can be pretty involved
-              —&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;have&nbsp;to&nbsp;be.
+              Using a traditional reactive framework
+              <!--- in modern web development -->
+              can be pretty&nbsp;involved.
+              <!--- —&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;have&nbsp;to&nbsp;be. -->
             </p>
             <p>
               Trillo is a groundbreaking alternative which
@@ -52,18 +57,16 @@
                   You can declare <a href="#">logic values</a> and
                   <a href="#">reactive expressions</a> using
                   <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
-                  <code>[&ZeroWidthSpace;[...]]</code> blocks.
+                  <code style="text-wrap: nowrap;">[&ZeroWidthSpace;[...]]</code> blocks.
                 </p>
               </li>
-              <li class="list-group-item">
-                <pre>
-<code>&lt;div :count="[&ZeroWidthSpace;[0]]"
-     :did-init="[&ZeroWidthSpace;[
+              <li class="list-group-item code">
+<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
+     :did-init="[[open]]
        setInterval(() => count++, 1000);
      ]]">
-  Seconds: [&ZeroWidthSpace;[count]]
-&lt;/div></code>
-                </pre>
+  Seconds: [[open]]count]]
+</div>'/>
               </li>
             </ul>
           </app-card>
@@ -78,10 +81,13 @@
                   and <a href="#">continues in the client</a> to support user interaction.
                 </p>
               </li>
-              <li class="list-group-item">
-                <pre>
-<code></code>
-                </pre>
+              <li class="list-group-item code">
+<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
+     :did-init="[[open]]
+       setInterval(() => count++, 1000);
+     ]]">
+  Seconds: [[open]]count]]
+</div>'/>
               </li>
             </ul>
           </app-card>
@@ -97,15 +103,18 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <p>
-                  With <code>&lt;:define></code> you can turn blocks of markup into parametric
+                  With <code style="text-wrap: nowrap;">&lt;:define></code> you can turn blocks of markup into parametric
                   <a href="#">custom tags</a>,
                   ready to be reused across your project.
                 </p>
               </li>
-              <li class="list-group-item">
-                <pre>
-<code></code>
-                </pre>
+              <li class="list-group-item code">
+<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
+     :did-init="[[open]]
+       setInterval(() => count++, 1000);
+     ]]">
+  Seconds: [[open]]count]]
+</div>'/>
               </li>
             </ul>
           </app-card>
@@ -117,15 +126,18 @@
               <li class="list-group-item">
                 <p>
                   <a href="#">Custom tags</a> can be promoted to
-                  <a href="#">components</a> with default styling,
-                  collected in <a href="#">kits</a> and reusable across projects.
+                  <a href="#">components</a> with default styling, and
+                  collected in <a href="#">kits</a> reusable across projects.
                   This site uses the <a href="#">Bootstrap Kit</a>.
                 </p>
               </li>
-              <li class="list-group-item">
-                <pre>
-<code></code>
-                </pre>
+              <li class="list-group-item code">
+<highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
+     :did-init="[[open]]
+       setInterval(() => count++, 1000);
+     ]]">
+  Seconds: [[open]]count]]
+</div>'/>
               </li>
             </ul>
           </app-card>
