--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -1,7 +1,6 @@
-<lib>
+<lib :page_headerBg="#273141">
   <style data-name="page">
     body {
-      /* background-color: #F6F7F8; */
       background-color: #FBFCFD;
       letter-spacing: .25px;
     }
@@ -28,38 +27,32 @@
     .app-lead {
       font-size: 1.2rem;
       font-weight: 300;
-      padding: .75rem 3rem 2.75rem 3rem;
+      padding: .75rem 1rem 2.75rem 1rem;
       text-align: center;
       color: rgb(64, 71, 86);
     }
     .app-lead > p:not(:last-child) {
       margin-bottom: 1.85rem;
     }
+    .list-group-item.code {
+      background-color: #F6F7F8;
+    }
+    .hljs-built_in, .hljs-symbol {
+        /* color: #e36209; */
+        color: #D76448;
+    }
     @media only screen and (min-width: 600px) {
       .app-lead  {
         font-size: 1.3rem;
-        padding: 1.75rem 3rem 3.75rem 3rem;
+        padding: 1.75rem 1rem 3.75rem 1rem;
       }
       .app-lead > p:not(:last-child) {
         margin-bottom: 2rem;
       }
     }
-    @media only screen and (min-width: 768px) {
-      .app-lead  {
-        font-size: 1.4rem;
-        padding: 2rem 3rem 4rem 3rem;
-      }
-    }
     @media only screen and (min-width: 992px) {
       .app-lead  {
-        font-size: 1.42rem;
-        padding: 2rem 3rem 4rem 3rem;
-      }
-    }
-    @media only screen and (min-width: 1400px) {
-      .app-lead  {
-        font-size: 1.45rem;
-        padding: 2rem 3rem 4rem 3rem;
+        font-size: 1.4rem;
       }
     }
   </style>
