--- a/docroot/index.html
+++ b/docroot/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>[[title]] • Reactive HTML</title>
+    <link rel="icon" href="/assets/trillo.svg">
     <!--- https://getbootstrap.com/docs/5.3/getting-started/introduction/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--- https://icons.getbootstrap.com -->
@@ -32,14 +33,18 @@
         <div class="col">
           <div class="app-lead">
             <p>
-              Using a traditional reactive framework
+              Using traditional reactive frameworks
+              like&nbsp;<a href="https://react.dev/" target="_blank"
+              >React</a>,&nbsp;<a href="https://angular.io/" target="_blank"
+              >Angular</a>&nbsp;or&nbsp;<a href="https://vuejs.org/" target="_blank"
+              >Vue</a>
               <!--- in modern web development -->
-              can be pretty&nbsp;involved.
+              can&nbsp;be&nbsp;pretty&nbsp;involved.
               <!--- —&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;have&nbsp;to&nbsp;be. -->
             </p>
             <p>
-              Trillo is a groundbreaking alternative which
-              <a href="#">strives&nbsp;for&nbsp;simplicity</a>.
+              Trillo is a groundbreaking alternative
+              which&nbsp;<a href="#">strives&nbsp;for&nbsp;simplicity</a>.
             </p>
           </div>
         </div>
