--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -13,7 +13,9 @@
            class="navbar navbar-expand-sm bg-body-tertiary"
            data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand" href="#">[[head.title]]</a>
+      <a class="navbar-brand" href="#">
+        <img src="/assets/trillo.svg" width="32" height="32">
+      </a>
       <button class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
