--- a/docroot/index.html
+++ b/docroot/index.html
@@ -32,6 +32,8 @@
       <div class="row">
         <div class="col">
           <div class="app-lead">
+            <div class="panel">
+            <div class="content">
             <p>
               Using traditional reactive frameworks
               like&nbsp;<a href="https://react.dev/" target="_blank"
@@ -46,6 +48,8 @@
               Trillo is a groundbreaking alternative
               which&nbsp;<a href="#">strives&nbsp;for&nbsp;simplicity</a>.
             </p>
+          </div>
+          </div>
           </div>
         </div>
       </div>
@@ -133,7 +137,6 @@
                   <a href="#">Custom tags</a> can be promoted to
                   <a href="#">components</a> with default styling, and
                   collected in <a href="#">kits</a> reusable across projects.
-                  This site uses the <a href="#">Bootstrap Kit</a>.
                 </p>
               </li>
               <li class="list-group-item code">
