--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -28,11 +28,26 @@
       font-size: 1.2rem;
       font-weight: 300;
       padding: .75rem 2rem 2.75rem 2rem;
+      margin: 0 -.5rem;
       text-align: center;
       color: rgb(64, 71, 86);
     }
-    .app-lead > p:not(:last-child) {
+    .app-lead p:not(:last-child) {
       margin-bottom: 1.85rem;
+    }
+    .app-lead .panel {
+      border-radius: 6px;
+      margin-bottom: 1rem;
+      overflow: hidden;
+    }
+    .app-lead .content {
+      display: inline-block;
+      width: fit-content;
+      background-color: #F6F7F8;
+      padding: 2rem 2rem 1.5rem 2rem;
+      border-width: 0 .5rem;
+      border-color: #D76448;
+      border-style: solid;
     }
     .list-group-item.code {
       background-color: #F6F7F8;
@@ -53,6 +68,9 @@
     @media only screen and (min-width: 992px) {
       .app-lead  {
         font-size: 1.35rem;
+      }
+      .app-lead > .content {
+        padding: 2rem 3rem 1.5rem 3rem;
       }
     }
   </style>
