--- a/docroot/index.html
+++ b/docroot/index.html
@@ -35,7 +35,7 @@
             <div class="panel">
             <div class="content">
             <p>
-              Using traditional reactive frameworks
+              Using traditional reactive&nbsp;frameworks
               like&nbsp;<a href="https://react.dev/" target="_blank"
               >React</a>,&nbsp;<a href="https://angular.io/" target="_blank"
               >Angular</a>&nbsp;or&nbsp;<a href="https://vuejs.org/" target="_blank"
@@ -45,8 +45,8 @@
               <!--- —&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;have&nbsp;to&nbsp;be. -->
             </p>
             <p>
-              Trillo is a groundbreaking alternative
-              which&nbsp;<a href="#">strives&nbsp;for&nbsp;simplicity</a>.
+              Trillo is a groundbreaking alternative&nbsp;which
+              <a href="#">strives&nbsp;for&nbsp;simplicity</a>.
             </p>
           </div>
           </div>
@@ -66,7 +66,7 @@
                   You can declare <a href="#">logic values</a> and
                   <a href="#">reactive expressions</a> using
                   <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
-                  <code style="text-wrap: nowrap;">[&ZeroWidthSpace;[...]]</code> blocks.
+                  <code style="text-wrap: nowrap;">[&ZeroWidthSpace;[&hellip;]]</code> blocks.
                 </p>
               </li>
               <li class="list-group-item code">
@@ -114,7 +114,7 @@
                 <p>
                   With <code style="text-wrap: nowrap;">&lt;:define></code> you can turn blocks of markup into parametric
                   <a href="#">custom tags</a>,
-                  ready to be reused across your project.
+                  ready to be reused anywhere in your project.
                 </p>
               </li>
               <li class="list-group-item code">
