--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -36,17 +36,18 @@
       margin-bottom: 1.85rem;
     }
     .app-lead .panel {
+      display: inline-block;
+      width: fit-content;
       border-radius: 6px;
-      margin-bottom: 1rem;
+      margin-bottom: .5rem;
       overflow: hidden;
     }
     .app-lead .content {
-      display: inline-block;
       width: fit-content;
       background-color: #F6F7F8;
-      padding: 2rem 2rem 1.5rem 2rem;
+      padding: 2.05rem 2rem 1.5rem 2rem;
       border-width: 0 .5rem;
-      border-color: #D76448;
+      border-color: #d67056;
       border-style: solid;
     }
     .list-group-item.code {
@@ -66,11 +67,11 @@
       }
     }
     @media only screen and (min-width: 992px) {
-      .app-lead  {
+      /* .app-lead  {
         font-size: 1.35rem;
-      }
+      } */
       .app-lead > .content {
-        padding: 2rem 3rem 1.5rem 3rem;
+        padding: 2.05rem 3rem 1.5rem 3rem;
       }
     }
   </style>
