--- a/docroot/index.html
+++ b/docroot/index.html
@@ -15,6 +15,7 @@
     <:import src="parts/navbar.htm"/>
     <:import src="parts/hero.htm"/>
     <:import src="parts/card.htm"/>
+    <:import src="parts/footer.htm"/>
     <:import src="/.kit/bootstrap/opt/highlight-js.htm"/>
   </head>
   <body>
@@ -69,14 +70,14 @@
                   <code style="text-wrap: nowrap;">[&ZeroWidthSpace;[&hellip;]]</code> blocks.
                 </p>
               </li>
-              <li class="list-group-item code">
+              <li class="list-group-item code"><div>
 <highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
      :did-init="[[open]]
        setInterval(() => count++, 1000);
      ]]">
   Seconds: [[open]]count]]
 </div>'/>
-              </li>
+              </div></li>
             </ul>
           </app-card>
         </div>
@@ -90,14 +91,14 @@
                   and <a href="#">continues in the client</a> to support user interaction.
                 </p>
               </li>
-              <li class="list-group-item code">
+              <li class="list-group-item code"><div>
 <highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
      :did-init="[[open]]
        setInterval(() => count++, 1000);
      ]]">
   Seconds: [[open]]count]]
 </div>'/>
-              </li>
+              </div></li>
             </ul>
           </app-card>
         </div>
@@ -117,14 +118,14 @@
                   ready to be reused anywhere in your project.
                 </p>
               </li>
-              <li class="list-group-item code">
+              <li class="list-group-item code"><div>
 <highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
      :did-init="[[open]]
        setInterval(() => count++, 1000);
      ]]">
   Seconds: [[open]]count]]
 </div>'/>
-              </li>
+              </div></li>
             </ul>
           </app-card>
         </div>
@@ -139,20 +140,23 @@
                   collected in <a href="#">kits</a> reusable across projects.
                 </p>
               </li>
-              <li class="list-group-item code">
+              <li class="list-group-item code"><div>
 <highlight-js :open="[['[' + '[']]" :source='<div :count="[[open]]0]]"
      :did-init="[[open]]
        setInterval(() => count++, 1000);
      ]]">
   Seconds: [[open]]count]]
 </div>'/>
-              </li>
+              </div></li>
             </ul>
           </app-card>
         </div>
       </div>
     </div>
 
+    <app-footer>
+      &copy; 2023 trillojs.org
+    </app-footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
