--- a/docroot/parts/page.htm
+++ b/docroot/parts/page.htm
@@ -3,6 +3,9 @@
     body {
       background-color: #FBFCFD;
       letter-spacing: .25px;
+      /* position: absolute;
+      width: 100%;
+      min-height: 100%; */
     }
     a {
       color: #D76448;
@@ -27,8 +30,8 @@
     .app-lead {
       font-size: 1.2rem;
       font-weight: 300;
-      padding: .75rem 2rem 2.75rem 2rem;
-      margin: 0 -.5rem;
+      padding: .75rem 0rem 2.75rem 0rem;
+      margin: 0 .5rem;
       text-align: center;
       color: rgb(64, 71, 86);
     }
@@ -45,33 +48,40 @@
     .app-lead .content {
       width: fit-content;
       background-color: #F6F7F8;
-      padding: 2.05rem 2rem 1.5rem 2rem;
+      padding: 2.05rem 1rem 1.5rem 1rem;
       border-width: 0 .5rem;
       border-color: #d67056;
       border-style: solid;
+      transition: padding .2s;
+    }
+    .list-group-item.code > div {
+      width: fit-content;
+    }
+    pre {
+      overflow: visible;
     }
     .list-group-item.code {
       background-color: #F6F7F8;
+      overflow-x: auto;
     }
     .hljs-built_in, .hljs-symbol {
         /* color: #e36209; */
         color: #D76448;
     }
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 576px) {
       .app-lead  {
         font-size: 1.3rem;
         padding: 1.75rem 2rem 3.75rem 2rem;
       }
-      .app-lead > p:not(:last-child) {
-        margin-bottom: 2rem;
+      .app-lead .content {
+        padding-left: 2rem;
+        padding-right: 2rem;
       }
     }
-    @media only screen and (min-width: 992px) {
-      /* .app-lead  {
-        font-size: 1.35rem;
-      } */
-      .app-lead > .content {
-        padding: 2.05rem 3rem 1.5rem 3rem;
+    @media only screen and (min-width: 1200px) {
+      .app-lead .content {
+        padding-left: 3rem;
+        padding-right: 3rem;
       }
     }
   </style>
