--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -2,9 +2,12 @@
   <style data-name="app-footer">
     .app-footer {
       background-color: [[page_headerBg]];
-      color: white;
+      color: #F6F7F8;
       padding: 3em;
       margin-top: 1.75em;
+    }
+    .app-footer a {
+      color: #f3a996;
     }
   </style>
 
