--- a/docroot/parts/navbar.htm
+++ b/docroot/parts/navbar.htm
@@ -31,10 +31,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Quick Start</a>
+            <a class="nav-link disabled" aria-disabled="true" href="#">Quick Start</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Docs</a>
+            <a class="nav-link disabled" aria-disabled="true" href="#">Docs</a>
           </li>
           <!---<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle"
@@ -59,7 +59,7 @@
                  aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>-->
-        <a href="https://github.com/fcapolini/trillo" target="_blank">
+        <a href="https://github.com/fcapolini/trillo">
           <!--- <i class="bi bi-github" style="font-size: 1.5rem"></i> -->
           <i class="lab la-github" style="font-size: 2rem;"></i>
           <!--- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
