--- a/docroot/index.html
+++ b/docroot/index.html
@@ -27,6 +27,11 @@
         the web framework for Node and the browser that
         <b>adds reactivity to HTML itself</b>
       </p>
+      <br/>
+      <div class="prompt">
+        <code><i class="las la-terminal"></i>npm i trillo</code>
+        <!--- <code><i class="lab la-npm"></i>npm i trillo</code> -->
+      </div>
     </app-hero>
 
     <div class="container">
@@ -67,7 +72,7 @@
                   You can declare <a href="#">logic values</a> and
                   <a href="#">reactive expressions</a> using
                   <span style="text-wrap: nowrap;"><code>:</code>-prefixed</span> attributes and
-                  <code style="text-wrap: nowrap;">[&ZeroWidthSpace;[&hellip;]]</code> blocks.
+                  <code style="text-wrap: nowrap;">[&#8288;[&hellip;]]</code> blocks.
                 </p>
               </li>
               <li class="list-group-item code"><div>
@@ -156,6 +161,7 @@
 
     <app-footer>
       &copy; 2023 trillojs.org
+      <a href="https://github.com/fcapolini/trillo/blob/main/LICENSE" style="float: right">MIT Licence</a>
     </app-footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
