--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -26,6 +26,23 @@
     .app-hero b {
       font-weight: 700;
     }
+    .app-hero > .prompt {
+      display: inline-block;
+      margin-top: 1rem;
+    }
+    .app-hero code {
+      display: flex;
+      align-items: center;
+      width: fit-content;
+      height: 37px;
+      font-size: 75%;
+      padding: 0 .75rem;
+    }
+    .app-hero code i {
+      font-size: 30px;
+      width: 30px;
+      margin-right: .5rem;
+    }
     @media only screen and (min-width: 576px) {
       .app-hero  {
         font-size: 1.5rem;
