--- a/docroot/index.html
+++ b/docroot/index.html
@@ -30,7 +30,6 @@
       <br/>
       <div class="prompt">
         <code><i class="las la-terminal"></i>npm i trillo</code>
-        <!--- <code><i class="lab la-npm"></i>npm i trillo</code> -->
       </div>
     </app-hero>
 
@@ -42,13 +41,11 @@
             <div class="content">
             <p>
               Using traditional reactive&nbsp;frameworks
-              like&nbsp;<a href="https://react.dev/" target="_blank"
-              >React</a>,&nbsp;<a href="https://angular.io/" target="_blank"
-              >Angular</a>&nbsp;or&nbsp;<a href="https://vuejs.org/" target="_blank"
+              like&nbsp;<a href="https://react.dev/"
+              >React</a>,&nbsp;<a href="https://angular.io/"
+              >Angular</a>&nbsp;or&nbsp;<a href="https://vuejs.org/"
               >Vue</a>
-              <!--- in modern web development -->
               can&nbsp;be&nbsp;pretty&nbsp;involved.
-              <!--- —&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;have&nbsp;to&nbsp;be. -->
             </p>
             <p>
               Trillo is a groundbreaking alternative&nbsp;which
