--- a/docroot/parts/hero.htm
+++ b/docroot/parts/hero.htm
@@ -28,7 +28,7 @@
     }
     .app-hero > .prompt {
       display: inline-block;
-      margin-top: 1rem;
+      margin-top: .33em;
     }
     .app-hero code {
       display: flex;
@@ -50,6 +50,9 @@
       }
       .app-hero h1 {
         font-size: 2em;
+      }
+      .app-hero > .prompt {
+        margin-top: .5em;
       }
     }
     @media only screen and (min-width: 1400px) {
