--- a/docroot/parts/footer.htm
+++ b/docroot/parts/footer.htm
@@ -3,7 +3,7 @@
     .app-footer {
       background-color: [[page_headerBg]];
       color: #F6F7F8;
-      padding: 3em;
+      padding: 3em 0;
       margin-top: 1.75em;
     }
     .app-footer a {
